@@ -440,7 +440,12 @@ MPI_Comm_join( int fd, MPI_Comm* newcomm )
             {
                 SCOREP_CommCreate( new_comm_handle );
             }
-            SCOREP_MpiCollectiveEnd( SCOREP_INVALID_INTERIM_COMMUNICATOR,
+            else
+            {
+                /* The communicator creation was a local operation, hence we use MPI_COMM_SELF for the collective */
+                new_comm_handle = SCOREP_MPI_COMM_HANDLE( MPI_COMM_SELF );
+            }
+            SCOREP_MpiCollectiveEnd( new_comm_handle,
                                      SCOREP_INVALID_ROOT_RANK,
                                      SCOREP_COLLECTIVE_CREATE_HANDLE,
                                      0,
