@@ -1,14 +1,18 @@
 ------------------- Upcoming version 8.4 -----------------------------
 
 Bugfixes:
-- Fix crash when issuing multiple consecutive split collective IO operations on
-  the same file handle.
+
+- Fix crash when issuing multiple consecutive split collective IO operations
+  on the same file handle.
 - Fix linking issues with LLVM based compilers when OpenMP target flags
   are used and the compiler instrumentation is active.
 - HIP instrumentation is now consistent with CUDA instrumentation in its
   handling of small rounding errors in device timestamp interpolation and
   will simply adjust the beginning of the next event per stream according
   to the events already seen.
+- Fix incorrect communicator attribute in MPI_COLLECTIVE_END events for
+  `MPI_Comm_create_group`, `MPI_Comm_create_from_group`, `MPI_Comm_join`,
+  and `MPI_Intercomm_create_from_groups`.
 
 ------------------- Released version 8.3 -----------------------------
 
